fix: clean up [DHIS2-16512]